--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vitejs/vite-monorepo",
+  "name": "@vitejs/vite-monorepooooo",
   "private": true,
   "type": "module",
   "engines": {
